# libbase64

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md
inc/: base64.hpp
src/: base64.cpp
test/: CMakeLists.txt  tests.cpp
